// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return create an job 1`] = `
Array [
  Object {
    "apiVersion": "batch/v1",
    "kind": "Job",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "sample",
        "owner": "sample",
        "team": "sample",
      },
      "name": "create-db-job-0123456",
      "namespace": "sample-42-my-test",
    },
    "spec": Object {
      "backoffLimit": 5,
      "template": Object {
        "metadata": Object {
          "annotations": Object {
            "app.gitlab.com/app": "socialgouv-sample",
            "app.gitlab.com/env": "my-test",
          },
          "labels": Object {
            "application": "sample",
            "owner": "sample",
            "team": "sample",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "command": Array [
                "create-db-user",
              ],
              "env": Array [
                Object {
                  "name": "NEW_DB_NAME",
                  "value": "autodevops_my-test",
                },
                Object {
                  "name": "NEW_USER",
                  "value": "user_my-test",
                },
                Object {
                  "name": "NEW_PASSWORD",
                  "value": "password_my-test",
                },
                Object {
                  "name": "NEW_DB_EXTENSIONS",
                  "value": "hstore pgcrypto citext uuid-ossp",
                },
              ],
              "envFrom": Array [
                Object {
                  "secretRef": Object {
                    "name": "azure-pg-admin-user",
                  },
                },
              ],
              "image": "ghcr.io/socialgouv/docker/azure-db:6.39.1",
              "imagePullPolicy": "IfNotPresent",
              "name": "create-db-user",
              "resources": Object {
                "limits": Object {
                  "cpu": "300m",
                  "memory": "256Mi",
                },
                "requests": Object {
                  "cpu": "100m",
                  "memory": "64Mi",
                },
              },
            },
          ],
          "restartPolicy": "Never",
        },
      },
      "ttlSecondsAfterFinished": 86400,
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Secret",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "sample",
        "owner": "sample",
        "team": "sample",
      },
      "name": "azure-pg-user-my-test",
      "namespace": "sample-42-my-test",
    },
    "stringData": Object {
      "DATABASE_URL": "postgresql://user_my-test%40sampledevserver.postgres.database.azure.com:password_my-test@sampledevserver.postgres.database.azure.com/autodevops_my-test?sslmode=require",
      "DB_URI": "postgresql://user_my-test%40sampledevserver.postgres.database.azure.com:password_my-test@sampledevserver.postgres.database.azure.com/autodevops_my-test?sslmode=require",
      "HASURA_GRAPHQL_DATABASE_URL": "postgresql://user_my-test%40sampledevserver.postgres.database.azure.com:password_my-test@sampledevserver.postgres.database.azure.com/autodevops_my-test?sslmode=require",
      "PGDATABASE": "autodevops_my-test",
      "PGHOST": "sampledevserver.postgres.database.azure.com",
      "PGPASSWORD": "password_my-test",
      "PGRST_DB_URI": "postgresql://user_my-test%40sampledevserver.postgres.database.azure.com:password_my-test@sampledevserver.postgres.database.azure.com/autodevops_my-test?sslmode=require",
      "PGSSLMODE": "require",
      "PGUSER": "user_my-test@sampledevserver.postgres.database.azure.com",
    },
  },
]
`;

exports[`should use custom pgHost 1`] = `
Array [
  Object {
    "apiVersion": "batch/v1",
    "kind": "Job",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "sample",
        "owner": "sample",
        "team": "sample",
      },
      "name": "create-db-job-0123456",
      "namespace": "sample-42-my-test",
    },
    "spec": Object {
      "backoffLimit": 5,
      "template": Object {
        "metadata": Object {
          "annotations": Object {
            "app.gitlab.com/app": "socialgouv-sample",
            "app.gitlab.com/env": "my-test",
          },
          "labels": Object {
            "application": "sample",
            "owner": "sample",
            "team": "sample",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "command": Array [
                "create-db-user",
              ],
              "env": Array [
                Object {
                  "name": "NEW_DB_NAME",
                  "value": "autodevops_my-test",
                },
                Object {
                  "name": "NEW_USER",
                  "value": "user_my-test",
                },
                Object {
                  "name": "NEW_PASSWORD",
                  "value": "password_my-test",
                },
                Object {
                  "name": "NEW_DB_EXTENSIONS",
                  "value": "hstore pgcrypto citext uuid-ossp",
                },
              ],
              "envFrom": Array [
                Object {
                  "secretRef": Object {
                    "name": "azure-pg-admin-user",
                  },
                },
              ],
              "image": "ghcr.io/socialgouv/docker/azure-db:6.39.1",
              "imagePullPolicy": "IfNotPresent",
              "name": "create-db-user",
              "resources": Object {
                "limits": Object {
                  "cpu": "300m",
                  "memory": "256Mi",
                },
                "requests": Object {
                  "cpu": "100m",
                  "memory": "64Mi",
                },
              },
            },
          ],
          "restartPolicy": "Never",
        },
      },
      "ttlSecondsAfterFinished": 86400,
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Secret",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "sample",
        "owner": "sample",
        "team": "sample",
      },
      "name": "azure-pg-user-my-test",
      "namespace": "sample-42-my-test",
    },
    "stringData": Object {
      "DATABASE_URL": "postgresql://user_my-test%40pouetpouet.com:password_my-test@pouetpouet.com/autodevops_my-test?sslmode=require",
      "DB_URI": "postgresql://user_my-test%40pouetpouet.com:password_my-test@pouetpouet.com/autodevops_my-test?sslmode=require",
      "HASURA_GRAPHQL_DATABASE_URL": "postgresql://user_my-test%40pouetpouet.com:password_my-test@pouetpouet.com/autodevops_my-test?sslmode=require",
      "PGDATABASE": "autodevops_my-test",
      "PGHOST": "pouetpouet.com",
      "PGPASSWORD": "password_my-test",
      "PGRST_DB_URI": "postgresql://user_my-test%40pouetpouet.com:password_my-test@pouetpouet.com/autodevops_my-test?sslmode=require",
      "PGSSLMODE": "require",
      "PGUSER": "user_my-test@pouetpouet.com",
    },
  },
]
`;
